Tidying up for maven publishing